Add more endpoint and some fixes
