# models/product.go
@@ -6,12 +6,13 @@ import (
 )
 
 type Product struct {
-	ID        uint           `json:"id" gorm:"primaryKey"`
+	ID        uint           `json:"id" gorm:"primaryKey" gorm:"autoIncrement"`
 	Name      string         `json:"name"`
 	Quantity  uint           `json:"quantity"`
 	Price     float32        `json:"price"`
-	CreateAt  time.Time      `json:"createAt" gorm:"autoCreateTime"`
-	UpdateAt  time.Time      `json:"updateAt" gorm:"autoUpdateTime"`
+	Available uint           `json:"available"`
+	CreateAt  time.Time      `json:"createdAt" gorm:"autoCreateTime"`
+	UpdateAt  time.Time      `json:"updatedAt" gorm:"autoUpdateTime"`
 	DeletedAt gorm.DeletedAt `json:"-"`
 	Sells     []Sell         `json:"sells"`
 }
