# models/sell.go
@@ -7,9 +7,10 @@ import (
 
 type Sell struct {
 	Id        uint           `json:"id" gorm:"primaryKey"`
+	Name      *string        `json:"name"`
 	ProductId uint           `json:"-"`
 	Product   Product        `json:"product"`
 	Quantity  uint           `json:"quantity"`
-	CreateAt  time.Time      `json:"createAt" gorm:"autoCreateTime"`
+	CreateAt  time.Time      `json:"createdAt" gorm:"autoCreateTime"`
 	DeleteAt  gorm.DeletedAt `json:"-"`
 }
